@@ -25,6 +25,8 @@ Version 3.1.0 - SVN
  - Add security: check for stale judging directories (port from ETH tree).
  - Bugfix: allow zero size testcases (port from ETH tree).
  - Show config checker runtime (port from ETH tree).
+ - Make syntax highlighting more modular, and add support for the
+   GeSHi syntax highlighter.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
